Get rid of guava