@@ -15,13 +15,10 @@
  */
 package software.xdev.mockserver.serialization.java;
 
-import com.google.common.base.Joiner;
-import com.google.common.base.Strings;
 import software.xdev.mockserver.model.Cookies;
 import software.xdev.mockserver.model.Headers;
 import software.xdev.mockserver.model.HttpResponseModifier;
 import software.xdev.mockserver.model.ObjectWithReflectiveEqualsHashCodeToString;
-import software.xdev.mockserver.serialization.Base64Converter;
 
 import java.util.List;
 import java.util.stream.Collectors;
@@ -30,8 +27,6 @@ import static software.xdev.mockserver.character.Character.NEW_LINE;
 import static software.xdev.mockserver.serialization.java.ExpectationToJavaSerializer.INDENT_SIZE;
 
 public class HttpResponseModifierToJavaSerializer implements ToJavaSerializer<HttpResponseModifier> {
-
-    private final Base64Converter base64Converter = new Base64Converter();
 
     public String serialize(List<HttpResponseModifier> httpResponseModifiers) {
         StringBuilder output = new StringBuilder();
@@ -90,7 +85,10 @@ public class HttpResponseModifierToJavaSerializer implements ToJavaSerializer<Ht
 
     private void outputList(int numberOfSpacesToIndent, StringBuffer output, List<String> add) {
         if (add != null && !add.isEmpty()) {
-            appendNewLineAndIndent((numberOfSpacesToIndent + 2) * INDENT_SIZE, output).append("ImmutableList.of(").append(Joiner.on(",").join(add.stream().map(s -> "\"" + s + "\"").collect(Collectors.toList()))).append(")");
+            appendNewLineAndIndent((numberOfSpacesToIndent + 2) * INDENT_SIZE, output)
+                .append("List.of(")
+                .append(add.stream().map(s -> "\"" + s + "\"").collect(Collectors.joining(",")))
+                .append(")");
         } else {
             appendNewLineAndIndent((numberOfSpacesToIndent + 2) * INDENT_SIZE, output).append("null");
         }
@@ -101,6 +99,6 @@ public class HttpResponseModifierToJavaSerializer implements ToJavaSerializer<Ht
     }
 
     private StringBuffer appendNewLineAndIndent(int numberOfSpacesToIndent, StringBuffer output) {
-        return output.append(NEW_LINE).append(Strings.padStart("", numberOfSpacesToIndent, ' '));
+        return output.append(NEW_LINE).append(" ".repeat(numberOfSpacesToIndent));
     }
 }
